Updated to 0.0.1-epsilon from 0.0.1-delta. Updated README.md.