@@ -1,30 +1,28 @@
 package Nutt.Visitors;
 
 import Nutt.Exceptions.NuttSuccessReturnException;
-import Nutt.NuttCommon;
 import Nutt.NuttEnvironment;
 import Nutt.NuttInterpreter;
-import Nutt.TypeInferencer;
+import Nutt.Types.Functional.Actionable.Procedure.Native.Append;
+import Nutt.Types.Functional.Actionable.Procedure.Native.Say;
+import Nutt.Types.Functional.Actionable.Procedure.Native.Sayn;
 import Nutt.Types.Functional.Actionable.Procedure.Procedure;
-import Nutt.Types.Functional.Listable.Array.Array;
 import Nutt.Types.Functional.Listable.IListable;
 import Nutt.Types.Functional.Listable.String.String;
 import Nutt.Types.Functional.Numerable.Int.Int;
 import Nutt.Types.IValuable;
 import Nutt.Types.Nil;
-import gen.NuttParser;
+import gen.Nutt;
 import org.antlr.v4.runtime.tree.ParseTree;
 import org.antlr.v4.runtime.tree.TerminalNode;
 
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.List;
-import java.util.Objects;
-import java.util.function.Function;
+import java.util.*;
 import java.util.function.Supplier;
 
-public class NuttFunctionVisitor extends NuttGenericVisitor
+public class NuttFunctionVisitor extends NuttGenericVisitor<IValuable>
 {
+	private final static java.lang.String[] nativeFunctionNames={"say","sayf","sayn","append","time","systime"};
+
 	public static Supplier<Nil> getNil()
 	{
 		return Nil::new;
@@ -32,8 +30,7 @@ public class NuttFunctionVisitor extends NuttGenericVisitor
 
 	public static boolean isNativeFunction(java.lang.String name)
 	{
-		List<java.lang.String> nativeNames=List.of("say","sayf","sayn","append","time","systime");
-		return nativeNames.contains(name);
+		return Arrays.asList(nativeFunctionNames).contains(name);
 	}
 
 	public static java.lang.String getFunctionName(List<TerminalNode> nameList)
@@ -45,72 +42,69 @@ public class NuttFunctionVisitor extends NuttGenericVisitor
 	}
 
 	@Override
-	public IValuable visitFunc_call_exp(NuttParser.Func_call_expContext ctx) throws NuttSuccessReturnException
+	public IValuable visitFunc_call_exp(Nutt.Func_call_expContext ctx) throws NuttSuccessReturnException
 	{
 		var evaluator=new NuttEvalVisitor();
-		var evaluated=evaluator.visit(ctx.functioncall().NAME());
-		List<IValuable> passedParameters=ctx.functioncall().arguments==null
+		List<IValuable> passedParameters=ctx.arguments==null
 		                                 ?new ArrayList<>()
-		                                 :ctx.functioncall().arguments.exp().stream().map(evaluator::visit).toList();
-		if(evaluated==null)
+		                                 :ctx.arguments.exp().stream().map(evaluator::visit).toList();
+		//Procedure not found, may be native
+		IValuable evaluated;
+		try
 		{
-			var nativeFunctionName=NuttEnvironment.toSourceCode(ctx.functioncall().NAME());
+			evaluated=evaluator.visit(ctx.name);
+		}
+		catch(Exception e)
+		{
+			var nativeFunctionName=NuttEnvironment.toSourceCode(ctx.name);
 			try
 			{
 				throw invokeNative(nativeFunctionName,passedParameters);
 			}
-			catch(NuttSuccessReturnException e)
+			catch(NuttSuccessReturnException re)
 			{
-				return e.getValue();
+				return re.getValue();
 			}
 		}
 		if(Objects.requireNonNull(evaluated) instanceof Procedure procedure)
-			procedure.replicate().proceed(passedParameters);
+			return procedure.replicate().proceed(passedParameters);
 		throw new RuntimeException();
 	}
 
-	@Override
-	public IValuable visitFunctioncall(NuttParser.FunctioncallContext ctx) throws NuttSuccessReturnException
+	public IValuable runStaticFunction(Nutt.Functioncall_statContext ctx)
 	{
-		var fullName=ctx
-				.NAME()
-				.getText();
+		var name=ctx.name.getText();
+		var parameters=ctx.explist()==null
+		               ?new ArrayList<IValuable>()
+		               :getArguments(ctx.explist().exp());
+		//return invokeNative(NuttEnvironment.toSourceCode(ctx.name),parameters).getValue();
+		if(/*ctx.name instanceof Nutt.Explicit_variableContext string&&*/isNativeFunction(name))
+			return invokeNative(name,parameters).getValue();
+		//var fullName=new NuttEvalVisitor().visit(ctx.name);
+		return invokeProcedure(NuttInterpreter.currentScope.getValuable(name).asFunctional().asActionable().asProcedure(),parameters);
+	}
+
+	private List<IValuable> getArguments(List<Nutt.ExpContext> contexts)
+	{
+		return contexts.stream().map(ctx->new NuttEvalVisitor().visit(ctx)).toList();
+	}
+
+	public IValuable invokeProcedure(java.lang.String name,List<IValuable> parameters)
+	{
+		return invokeProcedure(getProcedureAtName(name),parameters);
+	}
+
+	public IValuable invokeProcedure(Procedure procedure,List<IValuable> parameters)
+	{
 		try
 		{
-			var arguments=ctx.explist()==null
-			              ?new ArrayList<IValuable>()
-			              :getArguments(ctx
-					                            .explist()
-					                            .exp());
-			runFunction(fullName,arguments);
+			procedure.replicate().proceed(parameters);
 		}
 		catch(NuttSuccessReturnException e)
 		{
 			return e.getValue();
 		}
-		throw new RuntimeException();
-	}
-
-	private void runFunction(java.lang.String name,List<IValuable> parameters)
-			throws NuttSuccessReturnException
-	{
-		if(isNativeFunction(name)) throw invokeNative(name,parameters);
-		invokeProcedure(name,parameters);
-	}
-
-	private List<IValuable> getArguments(List<NuttParser.ExpContext> contexts)
-	{
-		return contexts.stream().map(ctx->new NuttEvalVisitor().visit(ctx)).toList();
-	}
-
-	public void invokeProcedure(java.lang.String name,List<IValuable> parameters) throws NuttSuccessReturnException
-	{
-		invokeProcedure(getProcedureAtName(name),parameters);
-	}
-
-	public void invokeProcedure(Procedure procedure,List<IValuable> parameters) throws NuttSuccessReturnException
-	{
-		procedure.replicate().proceed(parameters);
+		return new Nil();
 	}
 
 	private Procedure getProcedureAtName(java.lang.String name)
@@ -126,72 +120,44 @@ public class NuttFunctionVisitor extends NuttGenericVisitor
 						(
 								switch(name)
 								{
-									case "say" -> getSay(parameters);
-									case "sayn" -> getSayn(parameters);
-									case "sayf" -> getSayf(parameters);
-									case "append" -> getAppend(parameters);
-									case "time" -> getTime();
-									case "systime" -> getSystime();
-									default -> getNil();
+									case "say" -> new Say();
+									case "sayn" -> new Sayn();
+//									case "sayf" -> getSayf(parameters);
+									case "append" -> new Append();
+//									case "time" -> getTime();
+//									case "systime" -> getSystime();
+									default -> new Say();//getNil();
 								}
-						).get()
+						).proceed(parameters)
 				);
-	}
-
-	private Supplier<Nil> getSayn(List<IValuable> args)
-	{
-		if(args.size()>1) throw new RuntimeException();
-		return ()->
-		{
-			NuttInterpreter.say(args.get(0));
-			return new Nil();
-		};
-	}
-
-	private Supplier<IValuable> getSayf(List<IValuable> args)
-	{
-		return ()->
-		{
-			NuttInterpreter.sayFormatted(args);
-			return new Nil();
-		};
-	}
-
-	private Supplier<IValuable> getSay(List<IValuable> args)
-	{
-		if(args.size()>1) throw new RuntimeException();
-		return ()->
-		{
-			NuttInterpreter.sayNewLine(args.get(0));
-			return new Nil();
-		};
 	}
 
 	private Supplier<IListable> getAppend(List<IValuable> args)
 	{
-		Function<IValuable,IListable> asArray=v->v
-				.asFunctional()
-				.asListable()
-				.asArray();
-		return ()->
-		{
-			if(args.isEmpty()) return new Array();
-			var firstElement=asArray.apply(args.get(0));
-			var arr=new Array(firstElement.getElementType(),firstElement.getElements());
-			for(int i=1;i<args.size();++i)
-			{
-				var arg=args.get(i);
-				var argType=arg.getType();
-				if(!TypeInferencer.verdict(TypeInferencer.findType("Listable"),argType))
-				{
-					throw new RuntimeException("Cannot append %s to Array!".formatted(argType));
-				}
-				arr.setElements(NuttCommon.concat(arr.getElements(),asArray
-						.apply(arg)
-						.getElements()));
-			}
-			return arr;
-		};
+		return ()->args.get(0).asFunctional().asListable().asArray().addAll(args.get(1));
+		//		Function<IValuable,IListable> asArray=v->v
+		//				.asFunctional()
+		//				.asListable()
+		//				.asArray();
+		//		return ()->
+		//		{
+		//			if(args.isEmpty()) return new Array();
+		//			var firstElement=asArray.apply(args.get(0));
+		//			var arr=new Array(firstElement.getElementType(),firstElement.getElements());
+		//			for(int i=1;i<args.size();++i)
+		//			{
+		//				var arg=args.get(i);
+		//				var argType=arg.getType();
+		//				if(!TypeInferencer.verdict(TypeInferencer.findType("Listable"),argType))
+		//				{
+		//					throw new RuntimeException("Cannot append %s to Array!".formatted(argType));
+		//				}
+		//				arr.setElements(NuttCommon.concat(arr.getElements(),asArray
+		//						.apply(arg)
+		//						.getElements()));
+		//			}
+		//			return arr;
+		//		};
 	}
 
 	private Supplier<IValuable> getTime()
